fix display of client management on mobile #1748

--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -29,4 +29,13 @@
       color: var(--muted-text-color);
     }
   }
+
+  &--mini {
+    justify-content: space-between;
+    font-size: 1rem;
+
+    .pagination__button {
+      flex-basis: 100px;
+    }
+  }
 }
